--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
       idle-timeout: 300000
       maximum-pool-size: 5
       minimum-idle: 5
+  data:
+    redis:
+      host: 192.168.232.131
+      port: 6379
+      password: miirso
