--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
 
+        <!--sharding sphere 数据库分库分表-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
