--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -3,16 +3,8 @@ server:
 
 spring:
   datasource:
-    username: root
-    password: miirso
-    url: jdbc:mysql://192.168.232.131:3306/link?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&serverTimezone=GMT%2B8
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      connection-test-query: select 1
-      connection-timeout: 20000
-      idle-timeout: 300000
-      maximum-pool-size: 5
-      minimum-idle: 5
+    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
+    url: jdbc:shardingsphere:classpath:shardingsphere-config.yml
   data:
     redis:
       host: 192.168.232.131
