fix: 改为微服务
坑爹的feign:
1. 虚拟机docker运行的nacos调用微服务的地址是虚拟机的，但是服务是跑在本地的，需要手动指定url.
2. feign自己的bug，将GET自动转为POST.
3. IPage × Page √

--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -2,9 +2,20 @@ server:
   port: 8001
 
 spring:
+
+  application:
+    name: link-service # server name
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.232.131:8848 # nacos docker addr
+      config:
+        server-addr: 192.168.232.131:8848 # nacos docker addr
+
   datasource:
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     url: jdbc:shardingsphere:classpath:shardingsphere-config.yml
+
   data:
     redis:
       host: 192.168.232.131
