--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -2,6 +2,17 @@ server:
   port: 8002
 
 spring:
+  application:
+    name: admin-service # server name
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.232.131:8848 # nacos docker addr
+      config:
+        server-addr: 192.168.232.131:8848 # nacos docker addr
+    feign:
+      httpclient:
+        enabled: true # 解决GET变POST的bug
 #  datasource:
 #    username: root
 #    password: miirso
