--- a/project/src/main/resources/shardingsphere-config.yml
+++ b/project/src/main/resources/shardingsphere-config.yml
@@ -1,7 +1,4 @@
 # 分库分表配置
-
-
-# 数据源集合
 dataSources:
   ds_0:
     dataSourceClassName: com.zaxxer.hikari.HikariDataSource
@@ -9,30 +6,28 @@ dataSources:
     jdbcUrl: jdbc:mysql://192.168.232.131:3306/link?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     username: root
     password: miirso
-
-# 规则
-# 逻辑表和物理表这一点,也是满足了扩展代码不侵入的原则了,无需改变之前写的mp代码.
 rules:
   - !SHARDING
     tables:
       t_link:
-        # 真实数据节点，比如数据库源以及数据库在数据库中真实存在的
         actualDataNodes: ds_0.t_link_${0..15}
-        # 分表策略
         tableStrategy:
-          # 用于单分片键的标准分片场景
           standard:
-            # 分片键
             shardingColumn: gid
-            # 分片算法，对应 rules[0].shardingAlgorithms
             shardingAlgorithmName: link_table_hash_mod
-    # 分片算法
+      t_link_goto:
+        actualDataNodes: ds_0.t_link_goto_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: full_short_url
+            shardingAlgorithmName: link_goto_table_hash_mod
     shardingAlgorithms:
-      # 数据表分片算法
       link_table_hash_mod:
-        # 根据分片键 Hash 分片
         type: HASH_MOD
-        # 分片数量
+        props:
+          sharding-count: 16
+      link_goto_table_hash_mod:
+        type: HASH_MOD
         props:
           sharding-count: 16
 # 展现逻辑 SQL & 真实 SQL
