--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
 
   application:
     name: link-service # server name
+
   cloud:
     nacos:
       discovery:
@@ -22,3 +23,8 @@ spring:
       port: 6379
       password: miirso
       database: 14
+
+  mvc:
+    view:
+      prefix: /templates/
+      suffix: .html
