--- a/project/pom.xml
+++ b/project/pom.xml
@@ -82,6 +82,11 @@
             <version>1.17.2</version>
         </dependency>
 
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
